--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Header Section -->
   <header>
     <h1>Welcome to My Portfolio</h1>
+    <img src="Untitled design (1).jpg"/>
     <nav>
       <ul>
         <li><a href="#about">About Me</a></li>
